<resources>
    <string name="app_name">Radar</string>
    <string name="title_activity_maps">Radar</string>

    <!-- LAYOUT FILES -->

    <!-- Main Fragment Layout Strings -->
    <string name="quickdrop_hint">Quickdrop a note&#x2026;</string>
    <string name="refresh_button">NEW MESSAGES</string>

    <!-- BottomSheet Message details -->
    <string name="bookmark_button">BOOKMARK THIS</string>
    <string name="navigate_button">TAKE ME THERE</string>

    <!-- Compose Fragment Layout Strings -->
    <string name="filter_select_headline">Choose a category</string>
    <!-- Filter Names in Compose -->
    <string name="label_cute">CUTE</string>
    <string name="label_deal">DEAL</string>
    <string name="label_lol">LOL</string>
    <string name="label_event">EVENT</string>
    <string name="label_educational">LEARN</string>
    <string name="label_scavenger">SECRET</string>
    <string name="label_food">FOOD</string>

    <string name="distance_slider_headline">How far away should your message be seen?</string>
    <string name="duration_slider_headline">How long should your message be seen?</string>
    <string name="content_headline">Enter your message here</string>
    <string name="content_hint">Enter your message&#x2026; \n\n(160 characters max)</string>


    <!-- FRAGMENTS -->
    <!-- Main Fragment Strings -->


    <!-- Compose Fragment Strings -->
    <string name="toast_incomplete">Make sure you have entered a text and selected a category!</string>
    <string name="distance_unit">m</string>
    <string name="duration_unit">min</string>

    <!-- DatabaseWriter Strings -->
    <string name="toast_success">Message dropped successfully!</string>

    <!-- Bottom Navigation Strings-->
    <string name="menu_map">Map</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_listview">List View</string>

    <!-- Actionbar Titles -->
    <string name="actionbar_title_map">Radar</string>
    <string name="actionbar_title_compose">Compose Message</string>
    <string name="actionbar_title_listview">Nearby Messages</string>
    <string name="actionbar_title_settings">Settings</string>

    <!-- Actionbar Buttons -->
    <string name="actionbar_send">Send note</string>
    <string name="actionbar_filter">Filter</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_photo">Take photo</string>

    <!-- Delete Photo Dialog Strings -->
    <string name="photo_dialog_title">Delete attached photo</string>
    <string name="photo_dialog_message">Are you sure you want to delete the photo for this message?</string>
    <string name="photo_dialog_positive">YES</string>
    <string name="photo_dialog_negative">CANCEL</string>

    <!-- Filter Dialog Strings -->
    <string name="filter_dialog_title">Filter messages</string>
    <string name="filter_dialog_positive">APPLY FILTER</string>
    <string name="filter_dialog_negative">CANCEL</string>

    <!-- Sort Dialog Strings -->
    <string name="sort_dialog_title">Sort messages by</string>
    <string name="sort_dialog_positive">SORT</string>

    <!-- Settings Fragment Strings -->
    <string name="settings_quickdrop_headline">QuickDrop Preferences</string>
    <string name="settings_quickdrop_switch_txt">QuickDrop</string>
    <string name="settings_quickdrop_switch_desc">Enable the option to quickly drop a message on the map screen.</string>
    <string name="settings_quickdrop_category_txt">Default Category</string>
    <string name="settings_quickdrop_distance_txt">Default Distance</string>
    <string name="settings_quickdrop_duration_txt">Default Duration</string>

    <!-- SHARED PREFERENCES -->
    <string name="shared_prefs_bookmarks">com.radarapp.radar.PREFERENCE_BOOKMARKS</string>
    <string name="shared_prefs_qd">com.radarapp.radar.PREFERENCE_QD</string>
    <string name="shared_prefs_qd_category">com.radarapp.radar.PREFERENCE_QD_CATEGORY</string>
    <string name="shared_prefs_qd_distance">com.radarapp.radar.PREFERENCE_QD_DISTANCE</string>
    <string name="shared_prefs_qd_duration">com.radarapp.radar.PREFERENCE_QD_DURATION</string>

    <!-- NOTIFICATIONS -->
    <string name="notification_channelID">RADAR_NOTIFY</string>
    <string name="notification_channel_name">DM Notifications</string>
    <string name="notification_channel_desc">Notifications for messages dropped nearby</string>

    <!-- DEFAULT VALUES -->
    <string name="default_qd_distance">1000</string>
    <string name="default_qd_duration">60</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
