<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_map"
        android:enabled="true"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/menu_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_nav_compose"
        android:enabled="true"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:title="@string/menu_compose"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_nav_bookmark"
        android:enabled="true"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/menu_listview"
        app:showAsAction="ifRoom" />
</menu>